--- a/styles/style.css
+++ b/styles/style.css
@@ -9,23 +9,338 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.header {
+body {
+
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+.header { 
+  position: relative;
+  display: flex;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  padding: 0;
+  margin: 0;
+  background-color: #f2f2f2;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.logo_place_header {
+  width: 183px;
+  height: 32px;
+  background-image: url(../images/logo_place_header.svg);
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.header__title {
+  margin-left: 64px;
+  width: 730px;
+  align-self: center;
+  font-size: 102px;
+  font-weight: bold;
+  line-height: 96px;
+} 
+
+.header__subtitle {
+  position: absolute;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  width: 338px;
+  bottom: 30px;
+  left: 64px;
+  margin:0;
+  border: 0;
+  padding: 0;
+}
+
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background: #2f80ed;
+  position: absolute;
+  right: 0;
+  top: 64px;
+  z-index: 0;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.header__link {
+  text-decoration: none;
+  color:  #2f80ed;
+}
+
+
+.header__main-illustration{
+  margin: 0;
+  border: 0;
+  padding: 0;
+  height: 608px;
+  width: 765px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.description {
+  display: flex;
+  justify-content: center;
+
+}
+
+.two-columns {
+  display: flex;
+  width: 80%;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  padding: 0;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  width: 175px;
+  margin: 0;
+  line-height: 1.2;
+  font-weight: normal;
+  color:  #2f80ed;
+}
+
+.two-columns__main-text {
+  min-width: 784px;
+  width: 80%;
+  padding: 0px;
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.two-columns__paragraph {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-weight: normal;
+}
+
+.two-columns__paragraph_margin {
+  margin: 20px 0;
+}
+
+.span-accent {
+  font-weight: bold;
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+}
+
+.section-title {
+  display: flex;
+  margin-top: 100px;
+  margin-bottom: 20px;  
+  width: 60%;
+  justify-content: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  align-self: center;
+}
+
+.section-subtitle {
+  display: flex;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 60%;
+  align-self: center;
+  justify-content: center;
+  margin: 0;
+}
+
+.table {
+  display: flex;
+  margin: auto;
+  margin-bottom: 100px;
+  width: 1100px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  margin:0 0 20px 0 ;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.table__text_dop {
+  margin: 20px 0 0 0;
+}
+
+.feynman {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  height: 890px;
+  background-image: url("../images/feynman.png");
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: left bottom; 
+  background-color: #f2f2f2;
+}
+
+.feynman__title {
+    text-align: center;
+    margin-top: 100px;
+    width: 648px;
+    font-size: 120px;
+    line-height: 115px;
+    font-weight: bold;
+    align-self: center;
+}
+
+.feynman__subtitle {
+  text-align: center;
+  margin-top: 70px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  align-self: center; 
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  text-decoration: none;
+  color:  #2f80ed;
+}
+
+.kaufman {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-color: #1f1f1f;
+  color: white;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+  padding: 0 0  90px 0;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  right: -210px;
+  top: 0;
+  background-image: url("../images/kaufman-triangle.svg");
+  width: 877px;
+  height: 877px;
+  z-index: -1;
+}
+
+.section-title_theme_dark {
+  margin-top: 90px;
+}
+
+.table_theme_dark {
+  margin-bottom: 90px;
+
+}
+
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
   margin-top: 80px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  background-color:  #1f1f1f;
+  color: white;
+}
+
+.footer__columns {
+  display: flex;
+  margin: 60px 0 40px 0;
+  width: 90%;
+  min-height: 350px;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-basis: 711px;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.logo__place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+  width: 183px;
+  height: 35px;
+
+}
+
+.footer__author {
+  display: flex;
+  margin: 18px 0;
+  height: 25px;
+  font-size: 18px;
+  align-items: center;
+}
+
+.footer__column_content_info {
+  line-height: 30px;
+  font-size: 18px;
+}
+
+.footer__column-social-icon {
+  line-height: 30px;
+  font-size: 18px;
+}
+
+.footer__column-heading {
+  margin: 0;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  display: flex;
+  margin: 20px 0 16px 0;
+  flex-direction: column;
+}
+
+.footer__link {
+  display: flex; 
+  font-weight: normal;
+  color: white;
+  text-decoration: none;
+}
+
+.footer__social-icon {
+  height: 16px;
+  width: 16px;
+  margin-right: 10px;
+  align-self: center;
 }
