--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,7 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-body {
-
+.body {
   padding: 0;
   margin: 0;
   border: 0;
@@ -42,6 +41,8 @@ body {
 }
 
 .header__title {
+  margin-top: 0;
+  margin-bottom: 0;
   margin-left: 64px;
   width: 730px;
   align-self: center;
@@ -92,14 +93,13 @@ body {
 .description {
   display: flex;
   justify-content: center;
-
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .two-columns {
   display: flex;
   width: 80%;
-  margin-top: 100px;
-  margin-bottom: 100px;
   padding: 0;
   justify-content: space-between;
 }
@@ -126,11 +126,11 @@ body {
   font-weight: normal;
 }
 
-.two-columns__paragraph_margin {
-  margin: 20px 0;
-}
+.two-columns__paragraph:nth-of-type(2) {
+  margin: 30px 0;
+} 
 
-.span-accent {
+.two-columns__span-accent {
   font-weight: bold;
 }
 
@@ -187,9 +187,11 @@ body {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  padding: 0;
+  margin: 0;
 }
 
-.table__text_dop {
+.table__text:nth-of-type(2) {
   margin: 20px 0 0 0;
 }
 
@@ -197,7 +199,7 @@ body {
   display: flex;
   position: relative;
   flex-direction: column;
-  height: 890px;
+  min-height: 890px;
   background-image: url("../images/feynman.png");
   background-repeat: no-repeat;
   background-size: 867px 637px;
@@ -213,6 +215,7 @@ body {
     line-height: 115px;
     font-weight: bold;
     align-self: center;
+    margin-bottom: 0;
 }
 
 .feynman__subtitle {
@@ -222,6 +225,7 @@ body {
   line-height: 51px;
   font-weight: normal;
   align-self: center; 
+  margin-bottom: 0;
 }
 
 .feynman__link {
@@ -243,7 +247,7 @@ body {
   color: white;
   overflow: hidden;
   z-index: 0;
-  padding: 0 0  90px 0;
+  padding: 90px 0;
 }
 
 .kaufman__triangle {
@@ -257,11 +261,11 @@ body {
 }
 
 .section-title_theme_dark {
-  margin-top: 90px;
+  margin-top: 0;
 }
 
 .table_theme_dark {
-  margin-bottom: 90px;
+  margin-bottom: 0;
 }
 
 .table__cell_theme_dark {
@@ -274,24 +278,27 @@ body {
   justify-content: center;
   background-color:  #1f1f1f;
   color: white;
+  padding: 60px 0 40px 0;
+
 }
 
 .footer__columns {
   display: flex;
-  margin: 60px 0 40px 0;
   width: 90%;
   min-height: 350px;
   justify-content: space-between;
+  border: blue solid;
 }
 
 .footer__column_content_copyright {
-  display: flex;
+  display: flex;  
   flex-basis: 711px;
   justify-content: space-between;
   flex-direction: column;
+  border: greenyellow solid;
 }
 
-.logo__place_footer {
+.logo_place_footer {
   background-image: url(../images/logo_place_footer.svg);
   width: 183px;
   height: 35px;
@@ -300,7 +307,7 @@ body {
 .footer__author {
   display: flex;
   margin: 18px 0;
-  height: 25px;
+  line-height: 25px;
   font-size: 18px;
   align-items: center;
 }
@@ -308,11 +315,13 @@ body {
 .footer__column_content_info {
   line-height: 30px;
   font-size: 18px;
+  border: red solid;
 }
 
-.footer__column-social-icon {
+.footer__column-social {
   line-height: 30px;
   font-size: 18px;
+  border: red solid;
 }
 
 .footer__column-heading {
