--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,7 @@
   font-size: 102px;
   font-weight: bold;
   line-height: 96px;
+  z-index: 2;
 } 
 
 .header__subtitle {
@@ -62,6 +63,7 @@
   margin:0;
   border: 0;
   padding: 0;
+  z-index: 3;
 }
 
 .header__square-pic {
@@ -142,8 +144,7 @@
 
 .section-title {
   display: flex;
-  margin-top: 100px;
-  margin-bottom: 20px;
+  margin:0 0 20px 0;
   width: 60%;
   justify-content: center;
   line-height: 1.15;
@@ -245,7 +246,6 @@
   display: flex;
   flex-direction: column;
   background-color: #1f1f1f;
-  color: white;
   overflow: hidden;
   z-index: 0;
   padding: 90px 0;
@@ -264,10 +264,16 @@
 
 .section-title_theme_dark {
   margin-top: 0;
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
 }
 
 .table_theme_dark {
   margin-bottom: 0;
+  color: white;
 }
 
 .table__cell_theme_dark {
