--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -5,5 +5,5 @@
     font-style: normal;
     text-decoration: none;
     color:#2f80ed;
-    border: firebrick solid;
+    align-self: flex-start;
 }
